minor fixes in embeddings output

--- a/arabesque-demo.ipynb
+++ b/arabesque-demo.ipynb
@@ -147,12 +147,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import io.arabesque.ArabesqueContext\n",
+    "\n",
+    "val arab = new ArabesqueContext (sc)\n",
+    "val arabGraph = arab.textFile (\"file:///home/viniciusvdias/environments/Arabesque/data/citeseer-single-label.graph\")\n",
+    "val motifs = arabGraph.motifs (3)\n",
+    "motifs.config.getOutputPath"
+   ]
   }
  ],
  "metadata": {
