aggregations supported in new api

--- a/arabesque-newapi-demo.ipynb
+++ b/arabesque-newapi-demo.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -34,16 +34,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "spark application ID: local-1461450883972\n",
-      "arabesque context = io.arabesque.ArabesqueContext@3d7d57e3\n",
+      "spark application ID: local-1466351689305\n",
+      "arabesque context = io.arabesque.ArabesqueContext@512b4e8b\n",
       "localPath = /home/viniciusvdias/environments/Arabesque/data/citeseer-single-label.graph\n",
-      "arabesque graph = io.arabesque.ArabesqueGraph@6d110a3b\n",
-      "arabesque result = ArabesqueResult(org.apache.spark.SparkContext@76d1acf9,[sparkConf, mainGraphClass=null, embeddingClass=null, computationClass=null])\n",
+      "arabesque graph = io.arabesque.ArabesqueGraph@20bfec54\n",
+      "arabesque result = ArabesqueResult(org.apache.spark.SparkContext@410c64f0,SparkConfiguration(Map(arabesque.computation.class -> io.arabesque.gmlib.motif.MotifComputation, arabesque.output.path -> /tmp/arabesque-eded5f5f-27cc-41c6-aec9-c84a2bd9cc3a/graph-22eb0f8a-56ac-45f1-b72f-e2686eddf55f/motifs-ff13727e-fd93-4e3a-9545-6241dcf350c1, comm_ss -> embedding, arabesque.motif.maxsize -> 3, arabesque.graph.location -> /home/viniciusvdias/environments/Arabesque/data/citeseer-single-label.graph, arabesque.graph.local -> false, agg_ic -> true)))\n",
       "null\n",
-      "/tmp/arabesque-90ef2f1f-c0c0-48f0-956f-4f818199779b/graph-f0e64925-8aec-41ad-a632-236525b93f3a/motifs-457928c2-f810-4aa0-8c50-1138ba44e119\n",
+      "/tmp/arabesque-eded5f5f-27cc-41c6-aec9-c84a2bd9cc3a/graph-22eb0f8a-56ac-45f1-b72f-e2686eddf55f/motifs-ff13727e-fd93-4e3a-9545-6241dcf350c1\n",
       "two sample embeddings:\n",
       "VEmbedding(477, 2427, 2785)\n",
-      "VEmbedding(477, 2427, 2928)\n"
+      "VEmbedding(477, 2427, 2928)\n",
+      "aggKeys = motifs\n",
+      "Map([0,1-1,1],[1,1-2,1],[0,1-2,1] -> 1166, [1,1-2,1],[0,1-2,1] -> 23380)\n",
+      "Map(motifs -> Map([0,1-1,1],[1,1-2,1],[0,1-2,1] -> 1166, [1,1-2,1],[0,1-2,1] -> 23380))\n"
      ]
     }
    ],
@@ -74,6 +77,17 @@
     "val embeddings = motifs.embeddings\n",
     "println (motifs.config.getOutputPath)\n",
     "println (s\"two sample embeddings:\\n${embeddings.take(2).mkString(\"\\n\")}\")\n",
+    "\n",
+    "// getting aggregations, one by one ()\n",
+    "val aggKeys = motifs.registeredAggregations\n",
+    "println (s\"aggKeys = ${aggKeys.mkString(\" \")}\")\n",
+    "val motifsAgg = motifs.aggregation (aggKeys(0))\n",
+    "println (motifsAgg)\n",
+    "\n",
+    "// getting all aggregations\n",
+    "val allAggs = motifs.aggregations\n",
+    "println (allAggs)\n",
+    "\n",
     "arab.stop"
    ]
   }
