adding pdb & twitter apps. Fixing a bug in ArabesqueContext.java where local graphs are not loaded

--- a/arabesque-demo.ipynb
+++ b/arabesque-demo.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -76,10 +76,14 @@
     {
      "data": {
       "text/plain": [
-       "[sparkConf, mainGraphClass=null, embeddingClass=null, computationClass=null]"
+       "Name: Compile Error\n",
+       "Message: <console>:18: error: object arabesque is not a member of package io\n",
+       "         import io.arabesque.conf.SparkConfiguration\n",
+       "                   ^\n",
+       "StackTrace: "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +97,7 @@
     "config.set (\"computation\", \"io.arabesque.examples.motif.MotifComputation\")\n",
     "\n",
     "// graph input path: it can be local or hdfs\n",
-    "val localPath = s\"${System.getenv (\"ARABESQUE_HOME\")}/data/mico-qanat-sortedByDegree-same-label.txt\"\n",
+    "val localPath = s\"${System.getenv (\"ARABESQUE_HOME\")}/data/citeseer-single-label.graph\"\n",
     "config.set (\"input_graph_path\", localPath)\n",
     "\n",
     "// make clear to the system whether it must fetch the graph from local file system (file://) or hdfs (hdfs://)\n",
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -122,10 +126,14 @@
     {
      "data": {
       "text/plain": [
-       "AggregationStorage{name='motifs', keyValueMap={[0,1-1,1], [1,1-2,1], [0,1-2,1]=12534960, [1,1-2,1], [0,1-2,1]=53546459}}"
+       "Name: Compile Error\n",
+       "Message: <console>:18: error: object arabesque is not a member of package io\n",
+       "         import io.arabesque.computation.SparkMasterExecutionEngine\n",
+       "                   ^\n",
+       "StackTrace: "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -155,10 +163,14 @@
     {
      "data": {
       "text/plain": [
-       "null"
+       "Name: Compile Error\n",
+       "Message: <console>:18: error: object arabesque is not a member of package io\n",
+       "         import io.arabesque.ArabesqueContext\n",
+       "                   ^\n",
+       "StackTrace: "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,21 +179,32 @@
     "import io.arabesque.ArabesqueContext\n",
     "\n",
     "val arab = new ArabesqueContext (sc)\n",
-    "val arabGraph = arab.textFile (\"file:///home/viniciusvdias/environments/Arabesque/data/citeseer-single-label.graph\")\n",
+    "val arabGraph = arab.textFile (\"file:///home/abghanem/arabesque/arabesque-git/data/citeseer-single-label.graph\")\n",
     "val motifs = arabGraph.motifs (3)\n",
     "motifs.config.getOutputPath"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "arabesque_1.0.2",
-   "language": "",
-   "name": "arabesque_1.0.2"
+   "display_name": "arabesque_1.0.2 - Scala",
+   "language": "scala",
+   "name": "arabesque_1.0.2_scala"
   },
   "language_info": {
-   "name": "scala"
+   "name": "scala",
+   "version": "2.10.4"
   }
  },
  "nbformat": 4,
