--- a/arabesque-newapi-demo.ipynb
+++ b/arabesque-newapi-demo.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -34,20 +34,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "spark application ID: local-1466351689305\n",
-      "arabesque context = io.arabesque.ArabesqueContext@512b4e8b\n",
-      "localPath = /home/viniciusvdias/environments/Arabesque/data/citeseer-single-label.graph\n",
-      "arabesque graph = io.arabesque.ArabesqueGraph@20bfec54\n",
-      "arabesque result = ArabesqueResult(org.apache.spark.SparkContext@410c64f0,SparkConfiguration(Map(arabesque.computation.class -> io.arabesque.gmlib.motif.MotifComputation, arabesque.output.path -> /tmp/arabesque-eded5f5f-27cc-41c6-aec9-c84a2bd9cc3a/graph-22eb0f8a-56ac-45f1-b72f-e2686eddf55f/motifs-ff13727e-fd93-4e3a-9545-6241dcf350c1, comm_ss -> embedding, arabesque.motif.maxsize -> 3, arabesque.graph.location -> /home/viniciusvdias/environments/Arabesque/data/citeseer-single-label.graph, arabesque.graph.local -> false, agg_ic -> true)))\n",
-      "null\n",
-      "/tmp/arabesque-eded5f5f-27cc-41c6-aec9-c84a2bd9cc3a/graph-22eb0f8a-56ac-45f1-b72f-e2686eddf55f/motifs-ff13727e-fd93-4e3a-9545-6241dcf350c1\n",
-      "two sample embeddings:\n",
-      "VEmbedding(477, 2427, 2785)\n",
-      "VEmbedding(477, 2427, 2928)\n",
-      "aggKeys = motifs\n",
-      "Map([0,1-1,1],[1,1-2,1],[0,1-2,1] -> 1166, [1,1-2,1],[0,1-2,1] -> 23380)\n",
-      "Map(motifs -> Map([0,1-1,1],[1,1-2,1],[0,1-2,1] -> 1166, [1,1-2,1],[0,1-2,1] -> 23380))\n"
+      "spark application ID: local-1488369221787\n",
+      "arabesque context = io.arabesque.ArabesqueContext@5ea726e2\n",
+      "localPath = /home/local/QCRI/abghanem/arabesque/arabesque-git/data/citeseer-single-label.graph\n",
+      "arabesque graph = io.arabesque.ArabesqueGraph@54373a8f\n",
+      "arabesque result = ArabesqueResult(org.apache.spark.SparkContext@7ec90155,SparkConfiguration(Map(arabesque.computation.class -> io.arabesque.gmlib.motif.MotifComputation, arabesque.output.path -> /tmp/arabesque-f75fc16a-1495-49d4-8e65-23965496eead/graph-e9f268ac-a05e-495a-8701-11f535915f78/motifs-08f2bcd1-6abe-4bf9-bd46-d63b5f752f6f, comm_ss -> embedding, arabesque.motif.maxsize -> 3, arabesque.graph.location -> /home/local/QCRI/abghanem/arabesque/arabesque-git/data/citeseer-single-label.graph, arabesque.graph.local -> false, agg_ic -> true)))\n",
+      "null\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Name: java.lang.RuntimeException\n",
+       "Message: Could not load main graph\n",
+       "StackTrace: io.arabesque.conf.Configuration.createGraph(Configuration.java:358)\n",
+       "io.arabesque.conf.SparkConfiguration.initializeInJvm(SparkConfiguration.scala:155)\n",
+       "io.arabesque.conf.SparkConfiguration.initialize(SparkConfiguration.scala:113)\n",
+       "io.arabesque.computation.ODAGMasterEngine$class.$init$(ODAGMasterEngine.scala:48)\n",
+       "io.arabesque.computation.ODAGMasterEngineSP.<init>(ODAGMasterEngineSP.scala:34)\n",
+       "io.arabesque.computation.ODAGMasterEngineSP.<init>(ODAGMasterEngineSP.scala:41)\n",
+       "io.arabesque.computation.SparkMasterEngine$.apply(SparkMasterEngine.scala:98)\n",
+       "io.arabesque.ArabesqueResult.masterEngine(ArabesqueResult.scala:41)\n",
+       "io.arabesque.ArabesqueResult.embeddings(ArabesqueResult.scala:56)\n",
+       "$line21.$read$$iwC$$iwC$$iwC$$iwC.<init>(<console>:31)\n",
+       "$line21.$read$$iwC$$iwC$$iwC.<init>(<console>:36)\n",
+       "$line21.$read$$iwC$$iwC.<init>(<console>:38)\n",
+       "$line21.$read$$iwC.<init>(<console>:40)\n",
+       "$line21.$read.<init>(<console>:42)\n",
+       "$line21.$read$.<init>(<console>:46)\n",
+       "$line21.$read$.<clinit>(<console>)\n",
+       "$line21.$eval$.<init>(<console>:7)\n",
+       "$line21.$eval$.<clinit>(<console>)\n",
+       "$line21.$eval.$print(<console>)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
+       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
+       "java.lang.reflect.Method.invoke(Method.java:498)\n",
+       "org.apache.spark.repl.SparkIMain$ReadEvalPrint.call(SparkIMain.scala:1065)\n",
+       "org.apache.spark.repl.SparkIMain$Request.loadAndRun(SparkIMain.scala:1346)\n",
+       "org.apache.spark.repl.SparkIMain.loadAndRunReq$1(SparkIMain.scala:840)\n",
+       "org.apache.spark.repl.SparkIMain.interpret(SparkIMain.scala:871)\n",
+       "org.apache.spark.repl.SparkIMain.interpret(SparkIMain.scala:819)\n",
+       "org.apache.toree.kernel.interpreter.scala.ScalaInterpreter$$anonfun$interpretAddTask$1$$anonfun$apply$3.apply(ScalaInterpreter.scala:361)\n",
+       "org.apache.toree.kernel.interpreter.scala.ScalaInterpreter$$anonfun$interpretAddTask$1$$anonfun$apply$3.apply(ScalaInterpreter.scala:356)\n",
+       "org.apache.toree.global.StreamState$.withStreams(StreamState.scala:81)\n",
+       "org.apache.toree.kernel.interpreter.scala.ScalaInterpreter$$anonfun$interpretAddTask$1.apply(ScalaInterpreter.scala:355)\n",
+       "org.apache.toree.kernel.interpreter.scala.ScalaInterpreter$$anonfun$interpretAddTask$1.apply(ScalaInterpreter.scala:355)\n",
+       "org.apache.toree.utils.TaskManager$$anonfun$add$2$$anon$1.run(TaskManager.scala:140)\n",
+       "java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)\n",
+       "java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -90,17 +131,28 @@
     "\n",
     "arab.stop"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "arabesque_1.0.2",
-   "language": "",
-   "name": "arabesque_1.0.2"
+   "display_name": "arabesque_1.0.2 - Scala",
+   "language": "scala",
+   "name": "arabesque_1.0.2_scala"
   },
   "language_info": {
-   "name": "scala"
+   "name": "scala",
+   "version": "2.10.4"
   }
  },
  "nbformat": 4,
